Preload Audio for Quicker Playback

--- a/epk.html
+++ b/epk.html
@@ -55,7 +55,7 @@
                             <h2>FUN</h2>
                             <span class="text-light">    unreleased</span>
                         </div>
-                        <audio class="col-sm w-100" controls src="audio/FUNfullmix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
+                        <audio class="col-sm w-100" controls preload="auto" src="audio/FUNfullmix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                     </div>
                 </div>
                 <div class="card gradient-side-black my-2 p-2">
@@ -63,21 +63,21 @@
                         <h2>New Beginnings</h2>
                         <span class="text-light">    snippet</span>
                     </div>
-                    <audio class="col-sm w-100" controls src="audio/newBEGINnings.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
+                    <audio class="col-sm w-100" controls preload="auto" src="audio/newBEGINnings.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                 </div>
                 <div class="card gradient-side-black my-2 p-2">
                     <div class="p-2 col-sm-1 text-left text-light">
                         <h2>Just A Plug</h2>
                         <span class="text-light">    unreleased</span>
                     </div>
-                    <audio class="col-sm w-100" controls src="audio/JustAPlugVocalsMix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
+                    <audio class="col-sm w-100" controls preload="auto" src="audio/JustAPlugVocalsMix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                 </div>
                 <div class="card gradient-side-black my-2 p-2">
                     <div class="p-2 col-sm-1 text-left text-light">
                         <h2>You Know</h2>
                         <span class="text-light">    unreleased</span>
                     </div>
-                    <audio class="col-sm w-100" controls src="audio/YouKnowmix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
+                    <audio class="col-sm w-100" controls preload="auto" src="audio/YouKnowmix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                 </div>
             </div>
         </div>
