Keywords and Descriptions
SEO

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Meta Tags -->
+    <meta name="keywords" content="lens, lensor, radii, rad, rap, lens_rap, song, artist, independant, music, coding, lensplaysgames, focused thought, rylan kellogg" />
+    <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
