Update epk.html keywords

--- a/epk.html
+++ b/epk.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta name="keywords" content="lens, music, electronic press kit, epk, rap, hip-hop, original, new, up and coming, emerging, artist, independant, spokane, washington state, focus, spotify, sound, song" />
+    <meta name="keywords" content="lens, music, epk, rapper, hip-hop, new, up and coming, emerging, artist, independant, spokane, washington state, focus, spotify, sound, song, electronic press kit, vibe, ride, sonics, phonics, fun, royalty, respect" />
     <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
