Open Graph Support

--- a/epk.html
+++ b/epk.html
@@ -1,11 +1,21 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta charset="utf-8">
         <title>Lensor Radii - EPK</title>
+        <meta property="og:title" content="Lensor Radii - EPK" />
+        <meta property="twitter:title" content="Lensor Radii - EPK" />
         <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-
+        <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="twitter:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="url" content="https://lensor-radii.netlify.app/epk.html" />
+        <meta name="og:url" content="https://lensor-radii.netlify.app/epk.html" />
+        <meta name="image" content="img/lens-yeah.jpg" />
+        <meta name="og:image" content="img/lens-yeah.jpg" />
+        <meta name="twitter:image" content="img/lens-yeah.jpg" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="canonical" content="https://lensor-radii.netlify.app/epk.html" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" href="/favicon.ico" />
