--- a/epk.html
+++ b/epk.html
@@ -2,18 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Lensor Radii - EPK</title>
-        <meta property="og:title" content="Lensor Radii - EPK" />
-        <meta property="twitter:title" content="Lensor Radii - EPK" />
-        <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-        <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-        <meta name="twitter:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
         <meta name="url" content="https://lensor-radii.netlify.app/epk.html" />
+        <title>Lensor Radii - EPK</title>
+        <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
         <meta name="og:url" content="https://lensor-radii.netlify.app/epk.html" />
-        <meta name="image" content="img/lens-yeah.jpg" />
-        <meta name="og:image" content="img/lens-yeah.jpg" />
-        <meta name="twitter:image" content="img/lens-yeah.jpg" />
+        <meta property="og:title" content="Lensor Radii - EPK" />
+        <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-yeah.jpg" />
+        <meta name="twitter:url" content="https://lensor-radii.netlify.app/epk.html" />
         <meta name="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="Lensor Radii - EPK" />
+        <meta name="twitter:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="twitter:image" content="https://lensor-radii.netlify.app/img/lens-yeah.jpg" />
         <meta name="canonical" content="https://lensor-radii.netlify.app/epk.html" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
