--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Lensor Radii - Home</title>
-    <meta property="og:title" content="Lensor Radii - Home" />
-    <meta property="twitter:title" content="Lensor Radii - Home" />
-    <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-    <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-    <meta name="twitter:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
     <meta name="url" content="https://lensor-radii.netlify.app" />
+    <title>Lensor Radii - Home</title>
+    <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
     <meta name="og:url" content="https://lensor-radii.netlify.app" />
-    <meta name="image" content="img/lens-high.jpg" />
+    <meta property="og:title" content="Lensor Radii - Home" />
+    <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
     <meta name="og:image" content="img/lens-high.jpg" />
-    <meta name="twitter:image" content="img/lens-high.jpg" />
+    <meta property="twitter:url" content="https://lensor-radii.netlify.app" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Lensor Radii - Home" />
+    <meta name="twitter:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+    <meta name="twitter:image" content="img/lens-high.jpg" />
     <link rel="canonical" href="https://lensor-radii.netlify.app" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
