EPK Basic Contact Info

--- a/epk.html
+++ b/epk.html
@@ -6,6 +6,7 @@
         <title>Lensor Radii - EPK</title>
         <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
         <meta name="og:url" content="https://lensor-radii.netlify.app/epk.html" />
+        <meta name="og:type" content="website" />
         <meta property="og:title" content="Lensor Radii - EPK" />
         <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
         <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-yeah.jpg" />
@@ -88,6 +89,15 @@
                         </div>
                         <audio class="col-sm w-100" controls preload="auto" src="audio/YouKnowmix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                     </div>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-lg jumbotron gradient-vert-dark pt-3 text-nowrap">
+                    <h2 class="p-2 mb-4 text-white">Contact</h2>
+                    <address>
+                        <a href="mailto:lensraproducer@gmail.com">📧 lensraproducer@gmail.com</a><br />
+                        <a href="tel:+15096373945">📱 (509) 637-3945</a>
+                    </address>
                 </div>
             </div>
         </div>
