--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Lensor Radii - Home</title>
     <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
     <meta name="og:url" content="https://lensor-radii.netlify.app" />
+    <meta name="og:type" content="website" />
     <meta property="og:title" content="Lensor Radii - Home" />
     <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
     <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
@@ -60,8 +61,8 @@
             </div>
             <div class="col-sm-4 card my-2">
                 <h2 class="p-3"><a class="badge badge-danger" href="https://lensplaysgames.itch.io/" target="_blank">Games</a></h2>
-                <span class="card-body pt-0">I create games (usually playable <a href="https://lensplaysgames.itch.io/sandbox" target="_blank">in browser</a> or as <a href="https://play.google.com/store/apps/details?id=com.LensPlaysGames.PixelPilot" target="_blank">an app</a>)! 
-                <br />I use Unity Game Engine, and since I'm stubborn, create (almost) every asset from scratch 😄. </span>
+                <span class="card-body pt-0">I create games (usually playable <a href="https://lensplaysgames.itch.io/sandbox" target="_blank">in browser</a> or as <a href="https://play.google.com/store/apps/details?id=com.LensPlaysGames.PixelPilot" target="_blank">an app</a>)!<br />
+                I use Unity Game Engine, and since I'm stubborn, create (almost) every asset from scratch 😄. </span>
                 <span>Click below to check out some games I've made!</span>
                 <form class="text-right p-3" action="https://lensplaysgames.itch.io/" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Itch.io -- LensPlaysGames" /></form>
             </div>
