epk layout shift
pictures -> below contact info

now 'eye path' through is:
Bio -> Music -> Contact Info -> Pictures

--- a/epk.html
+++ b/epk.html
@@ -52,11 +52,6 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="col-lg jumbotron gradient-vert-dark pt-3">
-                    <h2 class="px-2 mb-4 text-white">Pictures</h2>
-                    <img src="img/lens-yeah.jpg" class="img-fluid img-thumbnail my-2" alt="Lens looks down at camera" />
-                    <img src="img/lens-vibe.jpg" class="img-fluid img-thumbnail my-2" alt="Lens looks down at camera" />
-                </div>
                 <div class="col-lg jumbotron gradient-vert-dark pt-3 text-nowrap">
                     <h2 class="p-2 mb-4 text-white">Upcoming Tracks</h2>
                     <div class="card gradient-side-black my-2 p-2">
@@ -98,6 +93,13 @@
                         <a href="mailto:lensraproducer@gmail.com">📧 lensraproducer@gmail.com</a><br />
                         <a href="tel:+15096373945">📱 (509) 637-3945</a>
                     </address>
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-lg jumbotron gradient-vert-dark pt-3 text-center">
+                    <h2 class="px-2 mb-4 text-white">Pictures</h2>
+                    <img src="img/lens-yeah.jpg" class="img-fluid img-thumbnail my-2" alt="Lens looks down at camera" />
+                    <img src="img/lens-vibe.jpg" class="img-fluid img-thumbnail my-2" alt="Lens looks down at camera" />
                 </div>
             </div>
         </div>
