Add 'lens-ooh.jph' img to EPK

--- a/epk.html
+++ b/epk.html
@@ -99,7 +99,8 @@
                 <div class="col-lg jumbotron gradient-vert-dark pt-3 text-center">
                     <h2 class="px-2 mb-4 text-white">Pictures</h2>
                     <img src="img/lens-yeah.jpg" class="img-fluid img-thumbnail my-2" alt="Lens looks down at camera" />
-                    <img src="img/lens-vibe.jpg" class="img-fluid img-thumbnail my-2" alt="Lens looks down at camera" />
+                    <img src="img/lens-vibe.jpg" class="img-fluid img-thumbnail my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
+                    <img src="img/lens-ooh.jpg" style="max-width: 33vmax" class="img-fluid img-thumbnail my-2" alt="Lens sitting in chair, meaninfully gazing into the existence of the implied viewer" />
                 </div>
             </div>
         </div>
