Create EPK Links and Update Contact Info

--- a/epk.html
+++ b/epk.html
@@ -87,20 +87,41 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="col-lg jumbotron gradient-vert-dark pt-3 text-nowrap">
+                <div class="col-lg jumbotron jumbotron-sm gradient-vert-dark mx-auto pb-1 pt-3 text-center">
                     <h2 class="p-2 mb-4 text-white">Contact</h2>
-                    <address>
-                        <a href="mailto:lensraproducer@gmail.com">📧 lensraproducer@gmail.com</a><br />
-                        <a href="tel:+15096373945">📱 (509) 637-3945</a>
-                    </address>
+                    <h6 class="text-danger"><em>* PROFESSIONAL INQUIRIES ONLY</em></h6>
+                    <table class="table table-dark table-striped">
+                        <thead><tr><td><h3>Info</h3></td></tr></thead>
+                        <tbody>
+                            <tr>
+                                <td><h5><a href="mailto:lensraproducer@gmail.com">📧 lensraproducer@gmail.com</a></h5></td>
+                            </tr>
+                            <tr>
+                                <td><h5><a href="mailto:lensraproducer@gmail.com">📱 (509) 637-3945</a></h4></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <div class="row m-0">
                 <div class="col-lg jumbotron gradient-vert-dark pt-3 text-center">
                     <h2 class="px-2 mb-4 text-white">Pictures</h2>
-                    <img src="img/lens-yeah.jpg" class="img-fluid img-thumbnail my-2" alt="Lens looks down at camera" />
-                    <img src="img/lens-vibe.jpg" class="img-fluid img-thumbnail my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
-                    <img src="img/lens-ooh.jpg" style="max-width: 33vmax" class="img-fluid img-thumbnail my-2" alt="Lens sitting in chair, meaninfully gazing into the existence of the implied viewer" />
+                    <img src="img/lens-yeah.jpg" class="img-fluid img-thumbnail pic-lg my-2" alt="Lens looks down at camera" />
+                    <img src="img/lens-vibe.jpg" class="col-md img-fluid img-thumbnail pic-md my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
+                    <img src="img/lens-ooh.jpg" class="col-md img-fluid img-thumbnail pic-md my-2" alt="Lens sitting in chair, meaninfully gazing into the existence of the implied viewer" />
+                </div>
+            </div>
+            <div class="row m-0">
+                <div class="col-sm jumbotron jumbotron-sm gradient-vert-dark mx-auto pb-1 pt-3 text-center">
+                    <h2 class="px-2 mb-4 text-white">Links</h2>
+                    <table class="table table-dark table-striped">
+                    <thead><tr><th><h3>Platform</h3></th></tr></thead>
+                    <tbody>
+                        <tr><td><h4><a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><img src="img/logo-spotify-color.png" width="16" height="16"/> Spotify</a></h4></td></tr>
+                        <tr><td><h4><a href="https://twitter.com/Lens_Rap" target="_blank"><img src="img/logo-twitter-color.png" width="16" height="16"/> Twitter</a></h4></td></tr>
+                        <tr><td><h4><a href="https://www.instagram.com/lens_rap/?hl=en" target="_blank"><img src="img/logo-ig-color.png" width="16" height="16"/> Instagram</a></h4></td></tr>
+                    </tbody>
+                    </table>
                 </div>
             </div>
         </div>
