--- a/index.html
+++ b/index.html
@@ -1,84 +1,84 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="url" content="https://lensor-radii.netlify.app" />
-    <title>Lensor Radii - Home</title>
-    <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-    <meta name="og:url" content="https://lensor-radii.netlify.app" />
-    <meta name="og:type" content="website" />
-    <meta property="og:title" content="Lensor Radii - Home" />
-    <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-    <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
-    <meta property="twitter:url" content="https://lensor-radii.netlify.app" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Lensor Radii - Home" />
-    <meta name="twitter:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-    <meta name="twitter:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
-    <link rel="canonical" href="https://lensor-radii.netlify.app" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="/favicon.ico" />
-  </head>
-  <body class="gradient">
-    <!--NAVBAR-->
-    <div class="container-fluid px-0">
-        <nav class="navbar navbar-expand-md bg-dark">
-            <h1><a class="navbar-brand badge badge-secondary text-white" href="/">Lensor Radii</a></h1>    
+    <head>
+        <meta charset="utf-8">
+        <meta name="url" content="https://lensor-radii.netlify.app" />
+        <title>Lensor Radii - Home</title>
+        <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="og:url" content="https://lensor-radii.netlify.app" />
+        <meta name="og:type" content="website" />
+        <meta property="og:title" content="Lensor Radii - Home" />
+        <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
+        <meta property="twitter:url" content="https://lensor-radii.netlify.app" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="Lensor Radii - Home" />
+        <meta name="twitter:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="twitter:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
+        <link rel="canonical" href="https://lensor-radii.netlify.app" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css" />
+        <link rel="icon" href="/favicon.ico" />
+    </head>
+    <body class="gradient">
+        <!--NAVBAR-->
+        <div class="container-fluid px-0">
+            <nav class="navbar navbar-expand-md bg-dark">
+                <h1><a class="navbar-brand badge badge-secondary text-white" href="/">Lensor Radii</a></h1>    
             
-            <button class="navbar-toggler bg-light navbar-light" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>  
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <div id="my_clock"></div>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <div class="btn btn-dark"><a class="nav-link text-light h4" href="/" target="_self">Home</a></div>
-                        <div class="btn btn-dark"><a class="nav-link text-light h4" href="/epk.html" target="_self">Electronic Press Kit</a></div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <!--CONTENT-->
-    <div class="container">
-        <div class="jumbotron row mx-0 my-2" style="background: rgb(247, 247, 247); background: linear-gradient(235deg, rgb(180, 180, 180) 0%, rgb(247, 247, 247) %100)">
-            <div class="col-sm-3">
-                <h1 class="text-body" style="font-size: 3rem;">Lens</h1>
-                <h3 class="text-dark"><span class="badge badge-primary">Independant</span> <span class="badge badge-danger">Creative</span> <span class="badge badge-success">Artist</span></h3>
-            </div>
-            <div class="col-sm-3 ml-auto text-right align-self-end">
-                <form action="/epk.html"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More"></form>
-            </div>
+                <button class="navbar-toggler bg-light navbar-light" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>  
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <div id="my_clock"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <div class="btn btn-dark"><a class="nav-link text-light h4" href="/" target="_self">Home</a></div>
+                            <div class="btn btn-dark"><a class="nav-link text-light h4" href="/epk.html" target="_self">Electronic Press Kit</a></div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-        <div class="row px-3">
-            <div class="col-sm-4 card my-2">
-                <h2 class="p-3"><a class="badge badge-success" href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank">Music</a></h2>
-                <span class="card-body pt-0">I am a fully-independent artist! I publish my own tracks on <a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=L-tbbkBTTjWAXTLW5KQuZg" target="_blank">Spotify</a> and many more places. </span>
-                <span>Click below to go to my Spotify Artist Page!</span>
-                <form class="text-right p-3" action="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Spotify -- Lens" /></form>
+        <!--CONTENT-->
+        <div class="container">
+            <div class="jumbotron row mx-0 my-2">
+                <div class="col-sm-3">
+                    <h1 class="text-body" style="font-size: 3rem;">Lens</h1>
+                    <h3 class="text-dark"><a class="badge badge-primary" href="https://github.com/LensPlaysGames/Coding-Projects">Independant</a> <span class="badge badge-danger">Creative</span> <a class="badge badge-success" href="/epk.html">Artist</a></h3>
+                </div>
+                <div class="col-sm-3 ml-auto text-right align-self-end">
+                    <form action="/epk.html"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More"></form>
+                </div>
             </div>
-            <div class="col-sm-4 card my-2">
-                <h2 class="p-3"><a class="badge badge-danger" href="https://lensplaysgames.itch.io/" target="_blank">Games</a></h2>
-                <span class="card-body pt-0">I create games (usually playable <a href="https://lensplaysgames.itch.io/sandbox" target="_blank">in browser</a> or as <a href="https://play.google.com/store/apps/details?id=com.LensPlaysGames.PixelPilot" target="_blank">an app</a>)!<br />
-                I use Unity Game Engine, and since I'm stubborn, create (almost) every asset from scratch 😄. </span>
-                <span>Click below to check out some games I've made!</span>
-                <form class="text-right p-3" action="https://lensplaysgames.itch.io/" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Itch.io -- LensPlaysGames" /></form>
+            <div class="row px-3">
+                <div class="col-sm-4 card my-2">
+                    <h2 class="p-3"><a class="badge badge-success" href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank">Music</a></h2>
+                    <span class="card-body pt-0">I am a fully-independent artist! I publish my own tracks on <a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=L-tbbkBTTjWAXTLW5KQuZg" target="_blank">Spotify</a> and many more places. </span>
+                    <span>Click below to go to my Spotify Artist Page!</span>
+                    <form class="text-right p-3" action="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Spotify -- Lens" /></form>
+                </div>
+                <div class="col-sm-4 card my-2">
+                    <h2 class="p-3"><a class="badge badge-danger" href="https://lensplaysgames.itch.io/" target="_blank">Games</a></h2>
+                    <span class="card-body pt-0">I create games (usually playable <a href="https://lensplaysgames.itch.io/sandbox" target="_blank">in browser</a> or as <a href="https://play.google.com/store/apps/details?id=com.LensPlaysGames.PixelPilot" target="_blank">an app</a>)!<br />
+                    I use Unity Game Engine, and since I'm stubborn, create (almost) every asset from scratch 😄. </span>
+                    <span>Click below to check out some games I've made!</span>
+                    <form class="text-right p-3" action="https://lensplaysgames.itch.io/" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Itch.io -- LensPlaysGames" /></form>
+                </div>
+                <div class="col-sm-4 card my-2">
+                    <h2 class="p-3"><a class="badge badge-primary" href="https://github.com/LensPlaysGames/Coding-Projects" target="_blank">Coding</a></h2>
+                    <span class="card-body pt-0">I enjoy programming quite a bit, as well! </span>
+                    <span>Check out Some Projects I've done, <small>other than this website 😀</small>, below!</span>
+                    <form class="text-right p-3" action="https://github.com/LensPlaysGames/Coding-Projects" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Github -- Coding Projects" /></form>
+                </div>
             </div>
-            <div class="col-sm-4 card my-2">
-                <h2 class="p-3"><a class="badge badge-primary" href="https://github.com/LensPlaysGames/Coding-Projects" target="_blank">Coding</a></h2>
-                <span class="card-body pt-0">I enjoy programming quite a bit, as well! </span>
-                <span>Check out Some Projects I've done, <small>other than this website 😀</small>, below!</span>
-                <form class="text-right p-3" action="https://github.com/LensPlaysGames/Coding-Projects" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Github -- Coding Projects" /></form>
-            </div>
-        </div>
         
-    </div>
+        </div>
 
-    <!--jQuery, Popper.js, Bootstrap.js-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+        <!--jQuery, Popper.js, Bootstrap.js-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </body>
 </html>
