epk links margin fix

--- a/epk.html
+++ b/epk.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="col-sm jumbotron jumbotron-sm gradient-vert-dark mx-auto pb-1 pt-3 text-center">
+                <div class="col-sm jumbotron jumbotron-sm gradient-vert-dark mx-auto mb-0 pb-1 pt-3 text-center">
                     <h2 class="px-2 mb-4 text-white">Links</h2>
                     <table class="table table-dark table-striped">
                     <thead><tr><th><h3>Platform</h3></th></tr></thead>
