--- a/epk.html
+++ b/epk.html
@@ -42,7 +42,7 @@
             </nav>
         </div>
         <!--CONTENT-->
-        <div class="container md-auto">
+        <div class="container md-auto text-center">
             <div class="row m-0">
                 <div class="col-md jumbotron gradient-vert text-white pt-3 m-0">
                     <h2 class="p-2 mb-4 text-white">Bio</h2>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="col-sm jumbotron jumbotron-sm gradient-vert-dark mx-auto mb-0 pb-1 pt-3 text-center">
+                <div class="col-sm jumbotron jumbotron-sm gradient-vert-dark mx-auto mb-0 pb-1 pt-3">
                     <h2 class="px-2 mb-4 text-white">Links</h2>
                     <table class="table table-dark table-striped">
                     <thead><tr><th><h3>Platform</h3></th></tr></thead>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="col-lg jumbotron jumbotron-sm gradient-vert-dark mx-auto pb-1 pt-3 text-center">
+                <div class="col-lg jumbotron jumbotron-sm gradient-vert-dark mx-auto pb-1 pt-3">
                     <h2 class="p-2 mb-4 text-white">Contact</h2>
                     <h6 class="text-danger"><em>* PROFESSIONAL INQUIRIES ONLY</em></h6>
                     <table class="table table-dark table-striped">
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="col-lg jumbotron gradient-vert-dark pt-3 text-center">
+                <div class="col-lg jumbotron gradient-vert-dark pt-3">
                     <h2 class="px-2 mb-4 text-white">Pictures</h2>
                     <img src="img/lens-yeah.jpg" class="img-fluid img-thumbnail pic-lg my-2" alt="Lens looks down at camera" />
                     <img src="img/lens-vibe.jpg" class="col-md img-fluid img-thumbnail pic-md my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
