epk remove img border

--- a/epk.html
+++ b/epk.html
@@ -106,12 +106,8 @@
                     <table class="table table-dark table-striped">
                         <thead><tr><td><h3>Info</h3></td></tr></thead>
                         <tbody>
-                            <tr>
-                                <td><h5><a href="mailto:lensraproducer@gmail.com">📧 lensraproducer@gmail.com</a></h5></td>
-                            </tr>
-                            <tr>
-                                <td><h5><a href="mailto:lensraproducer@gmail.com">📱 (509) 637-3945</a></h5></td>
-                            </tr>
+                            <tr><td><h5><a href="mailto:lensraproducer@gmail.com">📧 lensraproducer@gmail.com</a></h5></td></tr>
+                            <tr><td><h5><a href="mailto:lensraproducer@gmail.com">📱 (509) 637-3945</a></h5></td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -119,9 +115,9 @@
             <div class="row m-0">
                 <div class="col-lg jumbotron gradient-vert-dark pt-3">
                     <h2 class="px-2 mb-4 text-white">Pictures</h2>
-                    <img src="img/lens-yeah.jpg" class="img-fluid img-thumbnail pic-lg my-2" alt="Lens looks down at camera" />
-                    <img src="img/lens-vibe.jpg" class="col-md img-fluid img-thumbnail pic-md my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
-                    <img src="img/lens-ooh.jpg" class="col-md img-fluid img-thumbnail pic-md my-2" alt="Lens sitting in chair, meaninfully gazing into the existence of the implied viewer" />
+                    <img src="img/lens-yeah.jpg" class="img-fluid pic-lg my-2" alt="Lens looks down at camera" />
+                    <img src="img/lens-vibe.jpg" class="col-md img-fluid pic-md my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
+                    <img src="img/lens-ooh.jpg" class="col-md img-fluid pic-md my-2" alt="Lens sitting in chair, meaninfully gazing into the existence of the implied viewer" />
                 </div>
             </div>
         </div>
