INDEX Added gradient for jumbotron, cards

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <!--CONTENT-->
         <div class="container">
-            <div class="jumbotron row mx-0 my-2">
+            <div class="jumbotron gradient-vert-bright row mx-0 my-2">
                 <div class="col-sm-3">
                     <h1 class="text-body" style="font-size: 3rem;">Lens</h1>
                     <h3 class="text-dark"><a class="badge badge-primary" href="https://github.com/LensPlaysGames/Coding-Projects">Independant</a> <span class="badge badge-danger">Creative</span> <a class="badge badge-success" href="/epk.html">Artist</a></h3>
@@ -53,20 +53,20 @@
                 </div>
             </div>
             <div class="row px-3">
-                <div class="col-sm-4 card my-2">
+                <div class="col-sm-4 card gradient-vert-bright my-2">
                     <h2 class="p-3"><a class="badge badge-success" href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank">Music</a></h2>
                     <span class="card-body pt-0">I am a fully-independent artist! I publish my own tracks on <a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=L-tbbkBTTjWAXTLW5KQuZg" target="_blank">Spotify</a> and many more places. </span>
                     <span>Click below to go to my Spotify Artist Page!</span>
                     <form class="text-right p-3" action="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Spotify -- Lens" /></form>
                 </div>
-                <div class="col-sm-4 card my-2">
+                <div class="col-sm-4 card gradient-vert-bright my-2">
                     <h2 class="p-3"><a class="badge badge-danger" href="https://lensplaysgames.itch.io/" target="_blank">Games</a></h2>
                     <span class="card-body pt-0">I create games (usually playable <a href="https://lensplaysgames.itch.io/sandbox" target="_blank">in browser</a> or as <a href="https://play.google.com/store/apps/details?id=com.LensPlaysGames.PixelPilot" target="_blank">an app</a>)!<br />
                     I use Unity Game Engine, and since I'm stubborn, create (almost) every asset from scratch 😄. </span>
                     <span>Click below to check out some games I've made!</span>
                     <form class="text-right p-3" action="https://lensplaysgames.itch.io/" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Itch.io -- LensPlaysGames" /></form>
                 </div>
-                <div class="col-sm-4 card my-2">
+                <div class="col-sm-4 card gradient-vert-bright my-2">
                     <h2 class="p-3"><a class="badge badge-primary" href="https://github.com/LensPlaysGames/Coding-Projects" target="_blank">Coding</a></h2>
                     <span class="card-body pt-0">I enjoy programming quite a bit, as well! </span>
                     <span>Check out Some Projects I've done, <small>other than this website 😀</small>, below!</span>
