--- a/epk.html
+++ b/epk.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8">
         <meta name="url" content="https://lensor-radii.netlify.app/epk.html" />
         <title>Lensor Radii - EPK</title>
-        <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="description" content="Lens is an Independant Creative Artist dedicated to bringing new realities into existence." />
         <meta name="og:url" content="https://lensor-radii.netlify.app/epk.html" />
         <meta name="og:type" content="website" />
         <meta property="og:title" content="Lensor Radii - EPK" />
-        <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="og:description" content="Lens is an Independant Creative Artist dedicated to bringing new realities into existence." />
         <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-yeah.jpg" />
         <meta name="twitter:url" content="https://lensor-radii.netlify.app/epk.html" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta property="twitter:title" content="Lensor Radii - EPK" />
-        <meta name="twitter:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
+        <meta name="twitter:description" content="Lens is an Independant Creative Artist dedicated to bringing new realities into existence." />
         <meta name="twitter:image" content="https://lensor-radii.netlify.app/img/lens-yeah.jpg" />
         <meta name="canonical" content="https://lensor-radii.netlify.app/epk.html" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,17 +21,15 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" href="/favicon.ico" />
     </head>
-    <body class="gradient">
+    <body class="gradient-side-dark">
         <!--NAVBAR-->
         <div class="container-fluid px-0">
             <nav class="navbar navbar-expand-md bg-dark">
-                <h1><a class="navbar-brand badge badge-secondary text-white" href="/">Lensor Radii</a></h1>    
-            
+                <h1><a class="navbar-brand badge badge-secondary gradient-side text-white" href="/"><img src="favicon.png" alt="Lensor Radii Logo -- Plain Orange Circle" width="32" height="32"/> Lensor Radii</a></h1>    
                 <button class="navbar-toggler bg-light navbar-light" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>  
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <div id="my_clock"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <div class="btn btn-dark"><a class="nav-link text-light h4" href="/" target="_self">Home</a></div>
@@ -43,29 +41,34 @@
         </div>
         <!--CONTENT-->
         <div class="container md-auto text-center">
-            <div class="row m-0">
-                <div class="col-md jumbotron gradient-vert text-white pt-3 m-0">
-                    <h2 class="p-2 mb-4 text-white">Bio</h2>
-                    <span>
-                        It ain't about how I got here, it's about how I move forward. So let's do this shit 😈
-                    </span>
+            <div class="row m-0 my-4">
+                <div class="col-lg m-1">
+                    <div class="col-md jumbotron gradient-diag text-white pt-3 m-0">
+                        <h2 class="p-2 mb-4"><img src="img/lens-yung.png" alt="Close up of Lens' Face as a kid" width="64" height="64"/> Bio</h2>
+                        <span>
+                            I'm Lens! I spend my time making dope music, cool projects, and learning as much as fucking possible. If you down with that road and that vibe then stick around, we got a lot ahead of us :D <br />
+                            Anyway, <br />
+                            It ain't about how I got here, it's about how I move forward. So let's do this shit 😈
+                        </span>
+                    </div>
+                </div>
+                <div class="col-lg m-1">
+                    <div class="col-sm jumbotron jumbotron-sm gradient-diag-dark mx-auto mb-0 pb-1 pt-3">
+                        <h2 class="px-2 mb-4 text-white">Links</h2>
+                        <table class="table table-dark table-striped">
+                        <thead><tr><th><h3>Platform</h3></th></tr></thead>
+                        <tbody>
+                            <tr><td><h4><a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><img src="img/logo-spotify-color.png" width="16" height="16"/> Spotify</a></h4></td></tr>
+                            <tr><td><h4><a href="https://twitter.com/Lens_Rap" target="_blank"><img src="img/logo-twitter-color.png" width="16" height="16"/> Twitter</a></h4></td></tr>
+                            <tr><td><h4><a href="https://www.instagram.com/lens_rap/?hl=en" target="_blank"><img src="img/logo-ig-color.png" width="16" height="16"/> Instagram</a></h4></td></tr>
+                        </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
+
             <div class="row m-0">
-                <div class="col-sm jumbotron jumbotron-sm gradient-vert-dark mx-auto mb-0 pb-1 pt-3">
-                    <h2 class="px-2 mb-4 text-white">Links</h2>
-                    <table class="table table-dark table-striped">
-                    <thead><tr><th><h3>Platform</h3></th></tr></thead>
-                    <tbody>
-                        <tr><td><h4><a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><img src="img/logo-spotify-color.png" width="16" height="16"/> Spotify</a></h4></td></tr>
-                        <tr><td><h4><a href="https://twitter.com/Lens_Rap" target="_blank"><img src="img/logo-twitter-color.png" width="16" height="16"/> Twitter</a></h4></td></tr>
-                        <tr><td><h4><a href="https://www.instagram.com/lens_rap/?hl=en" target="_blank"><img src="img/logo-ig-color.png" width="16" height="16"/> Instagram</a></h4></td></tr>
-                    </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="row m-0">
-                <div class="col-lg jumbotron gradient-vert-dark pt-3 text-nowrap">
+                <div class="col-lg jumbotron gradient-diag pt-3 text-nowrap">
                     <h2 class="p-2 mb-4 text-white">Upcoming Tracks</h2>
                     <div class="card gradient-side-black my-2 p-2">
                         <div class="card-body p-0">
@@ -107,7 +110,7 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="col-lg jumbotron jumbotron-sm gradient-vert-dark mx-auto pb-1 pt-3">
+                <div class="col-lg jumbotron jumbotron-sm gradient-diag-dark mx-auto pb-1 pt-3">
                     <h2 class="p-2 mb-4 text-white">Contact</h2>
                     <h6 class="text-danger"><em>* PROFESSIONAL INQUIRIES ONLY</em></h6>
                     <table class="table table-dark table-striped">
@@ -120,7 +123,7 @@
                 </div>
             </div>
             <div class="row m-0">
-                <div class="col-lg jumbotron gradient-vert-dark pt-3">
+                <div class="col-lg jumbotron gradient-diag pt-3">
                     <h2 class="px-2 mb-4 text-white">Pictures</h2>
                     <img src="img/lens-yeah.jpg" class="img-fluid pic-lg my-2" alt="Lens looks down at camera" />
                     <img src="img/lens-vibe.jpg" class="col-md img-fluid pic-md my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
